<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/refresh_selected_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_pattern">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/task_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/title_big_size"
            android:textColor="@color/blue_select"
            android:text="Task title"
            android:layout_marginEnd="@dimen/half_margin_pattern"
            android:layout_marginBottom="@dimen/margin_pattern"/>

        <LinearLayout
            android:id="@+id/linear_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@id/task_title">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="@dimen/half_margin_pattern">

                <TextView
                android:id="@+id/label_hours_worked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title_size"
                android:text="@string/hours_worked"
                android:textStyle="bold" />

                <TextView
                    android:id="@+id/hours_horked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/label_hours_worked"
                    android:layout_marginBottom="@dimen/half_margin_pattern"
                    android:text="00:57"/>

                <TextView
                    android:id="@+id/label_hours_remaining"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:textSize="@dimen/title_size"
                    android:text="@string/hours_remaining"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/hours_remaining"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/half_margin_pattern"
                    android:layout_below="@id/label_hours_remaining"
                    android:layout_alignLeft="@id/label_hours_remaining"
                    android:text="07:02"/>

                <TextView
                    android:id="@+id/label_init_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/title_size"
                    android:text="@string/init_date"
                    android:layout_below="@id/hours_remaining"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/init_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/label_init_date"
                    android:layout_marginBottom="@dimen/half_margin_pattern"
                    android:text="16/03/18 13:30"/>

                <TextView
                    android:id="@+id/label_delivery_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/title_size"
                    android:layout_alignLeft="@id/hours_remaining"
                    android:layout_below="@id/hours_remaining"
                    android:text="@string/delivery_date"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/delivery_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/half_margin_pattern"
                    android:layout_below="@id/label_delivery_date"
                    android:layout_alignLeft="@id/label_delivery_date"
                    android:text="23/03/18 17:02"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/label_project"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title_size"
                android:text="@string/project"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/project"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:ellipsize="end"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/half_margin_pattern"
                android:text="Lucas > Teste Runrun"/>

            <TextView
                android:id="@+id/label_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title_size"
                android:text="@string/status"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:ellipsize="end"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/half_margin_pattern"
                android:text="Entregue"/>

            <TextView
                android:id="@+id/label_task_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title_size"
                android:text="@string/task_type"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/task_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/half_margin_pattern"
                android:singleLine="true"
                android:ellipsize="end"
                android:text="Desenvolvimento"/>

        </LinearLayout>

        <TextView
            android:id="@+id/label_created_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_size"
            android:layout_marginBottom="@dimen/half_margin_pattern"
            android:layout_below="@id/linear_information"
            android:text="Criada em:"
            android:textStyle="bold" />

        <com.github.pavlospt.roundedletterview.RoundedLetterView
            android:id="@+id/created_by_avatar"
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:layout_below="@id/label_created_at"
            app:rlv_backgroundColorValue="@color/blue_select"
            android:src="@color/blue_select" />

        <TextView
            android:id="@+id/created_by_txt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/avatar_size"
            android:text="Lucas Franco"
            android:layout_toEndOf="@id/created_by_avatar"
            android:layout_below="@id/label_created_at"
            android:layout_marginStart="@dimen/half_margin_pattern"
            android:layout_marginBottom="@dimen/half_margin_pattern"
            android:gravity="center_vertical"/>

        <TextView
            android:id="@+id/label_responsible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/title_size"
            android:layout_marginBottom="@dimen/half_margin_pattern"
            android:layout_below="@id/created_by_txt"
            android:text="@string/responsible"
            android:textStyle="bold" />

        <com.github.pavlospt.roundedletterview.RoundedLetterView
            android:id="@+id/responsible_avatar"
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:layout_below="@id/label_responsible"
            app:rlv_backgroundColorValue="@color/blue_select"
            android:src="@color/blue_select" />

        <TextView
            android:id="@+id/responsible_txt"
            android:layout_width="match_parent"
            android:layout_height="@dimen/avatar_size"
            android:text="Lucas Franco"
            android:layout_toEndOf="@id/responsible_avatar"
            android:layout_below="@id/label_responsible"
            android:layout_marginStart="@dimen/half_margin_pattern"
            android:gravity="center_vertical"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/responsible_avatar"
            android:orientation="horizontal"
            android:weightSum="2">

        <Button
            android:id="@+id/btn_start_work"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_size"
            android:background="@color/blue_select"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:layout_margin="@dimen/half_margin_pattern"
            android:layout_marginBottom="@dimen/half_margin_pattern"
            android:text="@string/start_work"/>

        <Button
            android:id="@+id/btn_deliver"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_margin="@dimen/half_margin_pattern"
            android:layout_height="@dimen/btn_size"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/deliver"/>

        </LinearLayout>

    </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.v4.widget.SwipeRefreshLayout>
